--- a/CV_ManagementSystem/Reports/ProjectList2.rdlc
+++ b/CV_ManagementSystem/Reports/ProjectList2.rdlc
@@ -63,7 +63,7 @@
                   <Width>1.23958in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>3.58333in</Width>
+                  <Width>6.52083in</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -94,7 +94,6 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
-                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -127,7 +126,6 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
-                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -165,7 +163,6 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
-                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -198,7 +195,6 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
-                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -236,7 +232,6 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
-                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -269,7 +264,6 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
-                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -307,7 +301,6 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
-                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -332,7 +325,9 @@
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Left</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>ScopeOfWork</rd:DefaultName>
@@ -340,7 +335,6 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
-                            <VerticalAlign>Bottom</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -458,7 +452,7 @@
             <Top>0.34667in</Top>
             <Left>0.10292in</Left>
             <Height>1.11827in</Height>
-            <Width>4.82291in</Width>
+            <Width>7.76041in</Width>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -484,7 +478,7 @@
             </Paragraphs>
             <rd:DefaultName>Textbox6</rd:DefaultName>
             <Top>0.09525cm</Top>
-            <Left>0cm</Left>
+            <Left>0.03175cm</Left>
             <Height>0.6cm</Height>
             <Width>2.76142cm</Width>
             <ZIndex>1</ZIndex>
@@ -499,10 +493,10 @@
             </Style>
           </Textbox>
         </ReportItems>
-        <Height>3.86912cm</Height>
+        <Height>3.97495cm</Height>
         <Style />
       </Body>
-      <Width>12.74973cm</Width>
+      <Width>20.10515cm</Width>
       <Page>
         <PageHeight>29.7cm</PageHeight>
         <PageWidth>21cm</PageWidth>
